# imupdate

./: CMakeLists.txt  README.md  build.sh
.github/workflows/: codeql.yml
src/: UI.cpp  UI.hpp  Updates.cpp  Updates.hpp  Utils.cpp  Utils.hpp  main.cpp  tray.hpp  updates.hpp
